fix jump year on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -660,8 +660,8 @@ body {
     margin-right: auto;
 }
 
-.yearAccordion #jumpWideScreen {
-    display: none;
+#jumpWideScreen {
+    display: none !important;
 }
 
 #yearJump {
